Update email group text message in Po file
AubergesDeJeunesse.com

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -1017,7 +1017,7 @@ msgstr "Bonjour"
 #: ../views/helpfile/pofields.php:572
 #, php-format
 msgid "Good news!"
-msgstr "Mon nom est Christophe et je vous remercie de votre demande de prix pour une auberge pour votre groupe. <br><br><b> 30.000 auberges dans 4.000 villes : </b><br>Nous avons plus de 30.000 auberges dans 4.000 villes à votre disposition ! <br> Cela vous donne beaucoup de choix mais également cela peut rendre la sélection compliquée quelques fois.<br>Ne vous inquiétez pas, je suis ici pour vous aider."
+msgstr "Mon nom est Christophe et je vous remercie de votre demande de prix pour une auberge pour votre groupe. <br><br><b> 30.000 auberges dans 4.000 villes : </b><br>Nous avons plus de 30.000 auberges dans 4.000 villes à votre disposition ! <br> Cela vous donne beaucoup de choix mais également cela peut rendre la sélection compliquée quelques fois.<br>Ne vous inquiétez pas, je suis ici pour vous aider.<br><br>Vous pouvez également me contacter par téléphone sur ma ligne directe au 33 (0)9-75-18-22-89 du lundi au vendredi de 15:30 à 21:00."
 
 #: ../views/email/admin/new_group_request.php:42
 #: ../views/helpfile/pofields.php:573
