--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -6035,7 +6035,7 @@ msgstr "Vos détails"
 
 #: ../views/group_request.php:262
 msgid "Please provide a phone number where we can reach you from 4:00 pm to 9:00 pm."
-msgstr "S'il vous plaît veuillez nous fournir un numéro de téléphone où nous pouvons vous joindre entre 16h00-17h00."
+msgstr "S'il vous plaît veuillez nous fournir un numéro de téléphone où nous pouvons vous joindre entre 15h30-21h00 du lundi au vendredi."
 
 #: ../views/group_request.php:291
 msgid "Additional information/requests"
