french po aubergesdejeunesse.com

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -1017,7 +1017,7 @@ msgstr "Bonjour"
 #: ../views/helpfile/pofields.php:572
 #, php-format
 msgid "Good news!"
-msgstr "Mon nom est Christophe et je vous remercie de votre demande de prix pour une auberge pour votre groupe. <br><br><b> 30.000 auberges dans 4.000 villes : </b><br>Nous avons plus de 30.000 auberges dans 4.000 villes à votre disposition ! <br> Cela vous donne beaucoup de choix mais également cela peut rendre la sélection compliquée quelques fois.<br>Ne vous inquiétez pas, je suis ici pour vous aider.<br><br>Vous pouvez également me contacter par téléphone sur ma ligne directe au 33 (0)9-75-18-22-89 du lundi au vendredi de 15:30 à 21:00."
+msgstr "Mon nom est Christophe et je vous remercie de votre demande de prix pour une auberge pour votre groupe. <br><br><b> 30.000 auberges dans 4.000 villes : </b><br>Nous avons plus de 30.000 auberges dans 4.000 villes à votre disposition ! <br> Cela vous donne beaucoup de choix mais également cela peut rendre la sélection compliquée quelques fois.<br>Ne vous inquiétez pas, je suis ici pour vous aider."
 
 #: ../views/email/admin/new_group_request.php:42
 #: ../views/helpfile/pofields.php:573
@@ -1029,20 +1029,20 @@ msgstr "<b> Comparez les auberges et les prix : </b><br>Je vous invite à faire 
 #: ../views/helpfile/pofields.php:574
 #, php-format
 msgid "Please take a look at the attached file for more details."
-msgstr "<b> Les diners et les paniers pique-nique : </b><br>Les diners et les paniers pique-nique sont facilités - après - réservation par nos services auprès des auberges qui en sont responsables.<br>Le budget pour un diner est en général de 10 à 12 €  par personne et 8 € par personne pour les paniers pique-nique."
+msgstr "<b> Les diners et les paniers pique-nique : </b><br>Les diners et les paniers pique-nique sont facilités - après - réservation par nos services auprès des auberges qui en sont responsables.<br>Le budget pour un diner est en général de 10 à 15 €  par personne et 8 € par personne pour les paniers pique-nique."
 
 #: ../views/email/admin/new_group_request.php:46
 #: ../views/helpfile/pofields.php:576
 #, php-format
 msgid "Please do not hesitate to contact me if you have any questions."
-msgstr "<b> Dates, nombre de personnes et budget confirmés : </b><br>Dès que les dates et le nombre de personnes sont confirmés, je vous invite à me recontacter directement.<br>Je pourrais à ce moment-là vous aider à finaliser votre selection.<br><br> Merci de votre confiance."
+msgstr "<b> Dates, nombre de personnes et budget confirmés : </b><br>Dès que les dates et le nombre de personnes sont confirmés, je vous invite à me recontacter directement.<br>Je pourrais à ce moment-là vous aider à finaliser votre selection.<br><br>Vous pouvez également me contacter par téléphone sur ma ligne directe au 33 (0)9-75-18-22-89 du lundi au vendredi de 15:30 à 21:00.<br><br> Merci de votre confiance."
 
 #: ../views/email/admin/new_group_request.php:48
 #: ../views/helpfile/pofields.php:163
 #: ../views/helpfile/pofields.php:577
 #, php-format
 msgid "Sincerely."
-msgstr "Sincèrement."
+msgstr "Sincèrement,"
 
 #: ../views/email/admin/new_group_request.php:51
 #: ../views/helpfile/pofields.php:582
