Update PO french group

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -4678,7 +4678,7 @@ msgstr "Notes Importantes"
 
 #: ../views/restricted/user_group_quote.php:306
 msgid "The deposit is to be paid in British pounds as our Worldwide group center is located in London, England."
-msgstr "Le dépôt devra être payé en livres sterling car notre centre mondial de réservations de groupes se trouve à Londres en Angleterre."
+msgstr " "
 
 #: ../views/restricted/user_group_quote.php:308
 msgid "The Average price per person per night is for the requested arrival date and length of stay, actual day-by-day prices may vary."
@@ -4699,7 +4699,7 @@ msgstr "Les taux de change sont calculés en utilisant le taux ATM typique sur w
 #: ../views/restricted/user_group_quote.php:316
 #, php-format
 msgid "All card payments incur a 2% fee and all bank fees are to be paid by the booking party."
-msgstr "Tous les paiements par carte ont des frais de 2% supplémentaires et tous les frais bancaires sont à la charge du client."
+msgstr "Tous les paiements par carte ont des frais de 3% supplémentaires et tous les frais bancaires sont à la charge du client."
 
 #: ../views/restricted/user_group_quote.php:318
 msgid "As this is a group booking, group leader will need to be present at check in and the property may require\ta security bond at check-in."
