po update french 2

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -4632,7 +4632,7 @@ msgstr "Informations sur la cotation pour votre groupe"
 
 #: ../views/restricted/user_group_quote.php:152
 msgid "PLEASE NOTE THIS IS NOT A CONFIRMED BOOKING"
-msgstr "S'IL VOUS PLAÎT VEUILLEZ NOTRE QUE CECI N'EST PAS UNE RESERVATION CONFIRMEE."
+msgstr "S'IL VOUS PLAÎT VEUILLEZ NOTER QUE CECI N'EST PAS UNE RESERVATION CONFIRMEE."
 
 #: ../views/restricted/user_group_quote.php:153
 msgid "Please have a look at the offer below and check our website to get more information about the property."
