--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-19 01:35+0100\n"
-"PO-Revision-Date: 2012-12-10 18:09-0800\n"
+"PO-Revision-Date: 2012-12-13 12:13-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1025,7 +1025,7 @@ msgstr "Mi nombre es Carmen y les agradezco su preferencia al elegirnos para hac
 #: ../views/helpfile/pofields.php:573
 #, php-format
 msgid "We have found a great offer for your group."
-msgstr "<b>Compare precios y hostales</b><br><br>Los invito a hacer una búsqueda haciendo <a href=\"http://reservations.bookhostels.com/youth-hostel.com /?SubID=spain\" title=\"reserva de grupo\"> click en el link </a>para poder encontrar el mejor hostal, adecuado a sus posibilidades y precios.<br>Tómese su tiempo para ver el tipo de dormitorios que se ofrece, si el desayuno está incluido, ubicación en el mapa y otra información importante que lo ayude en su viaje.<br>Si no obtiene resultados en su búsqueda por favor cambie la fecha o reduzca el número de personas en su búsqueda.<br><br>"
+msgstr "<b>Compare precios y hostales</b><br><br>Los invito a hacer una búsqueda haciendo <a href=\"http://reservations.bookhostels.com/youth-hostel.com/?SubID=spain\" title=\"reserva de grupo\"> click en el link </a>para poder encontrar el mejor hostal, adecuado a sus posibilidades y precios.<br>Tómese su tiempo para ver el tipo de dormitorios que se ofrece, si el desayuno está incluido, ubicación en el mapa y otra información importante que lo ayude en su viaje.<br>Si no obtiene resultados en su búsqueda por favor cambie la fecha o reduzca el número de personas en su búsqueda.<br><br>"
 
 #: ../views/email/admin/new_group_request.php:44
 #: ../views/helpfile/pofields.php:574
@@ -1037,7 +1037,7 @@ msgstr "<b>Almuerzos y cenas</b><br><br>Almuerzos y cenas pueden organizarse des
 #: ../views/helpfile/pofields.php:576
 #, php-format
 msgid "Please do not hesitate to contact me if you have any questions."
-msgstr "<b>Fechas, presupuestos y viajeros confirmados<b><br><br>Cuando el número de personas y la fecha de viaje estén confirmados los invito a contactarme directamente.<br>De esa forma los ayudaré a finalizar su elección.<br>I nuevamente gracias por su confianza<br><br>"
+msgstr "<b>Fechas, presupuestos y viajeros confirmados</b><br>Cuando el número de personas y la fecha de viaje estén confirmados los invito a contactarme directamente.<br>De esa forma los ayudaré a finalizar su elección.<br>I nuevamente gracias por su confianza.<br><br>"
 
 #: ../views/email/admin/new_group_request.php:48
 #: ../views/helpfile/pofields.php:163
@@ -1050,7 +1050,7 @@ msgstr "Sinceramente"
 #: ../views/helpfile/pofields.php:582
 #, php-format
 msgid "Customer Service."
-msgstr "Carmen K<br>Servicio al Cliente<br>Hostales.com<br>AlberguesJuveniles.com"
+msgstr "Carmen K<br>Servicio al Cliente<br>AlberguesJuveniles.es<br>AlberguesJuveniles.com"
 
 #: ../views/email/reset_password-txt.php:7
 #: ../views/email/reset_password-html.php:44
