misc free service po fields french

--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -5934,7 +5934,7 @@ msgstr "Réservation de groupes"
 
 #: ../views/group_request.php:32
 msgid "Free service - Best price guaranteed!"
-msgstr "Meilleur prix. Nous vous le garantissons !"
+msgstr "Service gratuit et meilleur prix. Nous vous le garantissons !"
 
 #: ../views/group_request.php:36
 msgid "Send a free request now using the form below and we will get back to you in few hours."
