Fixed translation issues
MCWEB-285, MCWEB-257, MCWEB-256, MCWEB-232, MCWEB-231, MCWEB-228,
MCWEB-160.

--- a/languages/ci/locale/en_US/LC_MESSAGES/auberge_lang_mobi.po
+++ b/languages/ci/locale/en_US/LC_MESSAGES/auberge_lang_mobi.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 15:23+0530\n"
-"PO-Revision-Date: 2012-10-19 08:10-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-02-02 20:05+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,6 +18,7 @@ msgstr ""
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
 "\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Auberges SVN\\auberges\\trunk\\system"
@@ -7076,7 +7076,7 @@ msgstr "The activation code entered is invalid or has expired. "
 
 #: /opt/code/application/language/multi/tank_auth_lang.php:24
 msgid "Votre mot de passe a été modifié avec succès."
-msgstr "Your password has been successfully changed . "
+msgstr "Your password has been successfully changed. "
 
 #: /opt/code/application/language/multi/tank_auth_lang.php:25
 msgid ""
