Added new translations for blue strings.

--- a/languages/ci/locale/en_US/LC_MESSAGES/auberge_lang_nf.po
+++ b/languages/ci/locale/en_US/LC_MESSAGES/auberge_lang_nf.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 15:23+0530\n"
-"PO-Revision-Date: 2013-02-02 20:05+0200\n"
+"PO-Revision-Date: 2013-02-03 20:14+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -7146,7 +7146,7 @@ msgstr "Your new password for %s"
 
 #: /opt/code/application/language/multi/tank_auth_lang.php:45
 msgid "Ancien Mot de Passe"
-msgstr "Previous Password:"
+msgstr "Previous Password"
 
 #: /opt/code/application/language/multi/tank_auth_lang.php:46
 msgid "Nouveau Mot de Passe"
