Added ned strings for RU.

--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 15:23+0530\n"
-"PO-Revision-Date: 2013-02-03 22:12+0200\n"
+"PO-Revision-Date: 2013-02-05 23:43+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -6561,6 +6561,9 @@ msgid ""
 "to another group unfortunately. If you no longer need these beds, please let "
 "us know also right away."
 msgstr ""
+"Кровати были зарезервированы для вас. По истечении этого срока, к сожалению, "
+"они будут отданы другой группе. Если вы больше не нуждаетесь в этих "
+"кроватях, пожалуйста, сразу сообщите нам."
 
 #: /opt/code/application/views/helpfile/pofields.php:581
 #, php-format
@@ -6575,6 +6578,8 @@ msgid ""
 "We are very sorry but the selected hostel is the cheapest we have for your "
 "chosen dates."
 msgstr ""
+"Нам очень жаль, но в соответствии с запрашиваемым периодом, данный отель "
+"является самым дешевым."
 
 #: /opt/code/application/views/helpfile/pofields.php:584
 #, php-format
