--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 15:23+0530\n"
-"PO-Revision-Date: 2013-02-03 22:13+0200\n"
+"PO-Revision-Date: 2013-02-05 23:43+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -14,6 +14,7 @@ msgstr ""
 "X-Poedit-SourceCharset: utf-8\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.5.4\n"
+"X-Poedit-Bookmarks: -1,-1,-1,-1,-1,987,-1,-1,-1,-1\n"
 "X-Poedit-SearchPath-0: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
 "\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Auberges SVN\\auberges\\trunk\\system"
@@ -6556,6 +6557,9 @@ msgid ""
 "to another group unfortunately. If you no longer need these beds, please let "
 "us know also right away."
 msgstr ""
+"Кровати были зарезервированы для вас. По истечении этого срока, к сожалению, "
+"они будут отданы другой группе. Если вы больше не нуждаетесь в этих "
+"кроватях, пожалуйста, сразу сообщите нам."
 
 #: /opt/code/application/views/helpfile/pofields.php:581
 #, php-format
@@ -6570,6 +6574,8 @@ msgid ""
 "We are very sorry but the selected hostel is the cheapest we have for your "
 "chosen dates."
 msgstr ""
+"Нам очень жаль, но в соответствии с запрашиваемым периодом, данный отель "
+"является самым дешевым."
 
 #: /opt/code/application/views/helpfile/pofields.php:584
 #, php-format
