--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hb_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hb_lang.po
@@ -4,16 +4,16 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-08 16:48+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Poedit-Language: French\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Basepath: .\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: C:\\Users\\Louis-Michel\\workspace_pweb\\auberges"
 "\\trunk\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
@@ -2667,7 +2667,7 @@ msgid ""
 "20% deposit?"
 msgstr ""
 "Quand serez-vous prêt à faire un paiement pour garantir votre réservation "
-"avec un acompte de 20% ?"
+"avec un acompte de 20% %?"
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:150
 msgid "Group booking quote information"
@@ -2799,8 +2799,8 @@ msgid ""
 "All card payments incur a 2% fee and all bank fees are to be paid by the "
 "booking party."
 msgstr ""
-"Tous les paiements par carte ont des frais de 2% supplémentaires et tous les "
-"frais bancaires sont à la charge du client."
+"Tous les paiements par carte ont des frais de 2%% supplémentaires et tous "
+"les frais bancaires sont à la charge du client."
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:318
 msgid ""
@@ -3308,7 +3308,7 @@ msgstr "%s  résultats sur %s"
 #: /home/yanna/git-test/code/application/views/email/new_transaction_hb.php:97
 #, php-format
 msgid "Nombre de Nuits: %s"
-msgstr "Nombre de nuits : %s"
+msgstr "Nombre de nuits: %s"
 
 #: /home/yanna/git-test/code/application/views/city_view.php:173
 msgid "Close Map"
@@ -6827,8 +6827,8 @@ msgid ""
 "We want to make sure you are 100% satisfied, so do not hesitate to contact "
 "us."
 msgstr ""
-"Nous voulons nous assurer que vous êtes satisfait à 100%, alors n'hésitez ne "
-"pas à nous contacter."
+"Nous voulons nous assurer que vous êtes satisfait à 100%%, alors n'hésitez "
+"ne pas à nous contacter."
 
 #: /home/yanna/git-test/code/application/views/helpfile/pofields.php:583
 #, php-format
