--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-08 16:48+0200\n"
-"PO-Revision-Date: 2012-10-13 12:20-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-02-16 20:52+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2602,7 +2601,7 @@ msgstr "Ön eddig még nem irt értékelést ."
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:63
 msgid "Your personalized group booking quote - Here is your offer!"
-msgstr ""
+msgstr "Személyre szabott csoportos foglalási ajánlat - Az Ön árajánlata!"
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:66
 #: /home/yanna/git-test/code/application/views/helpfile/pofields.php:205
@@ -2612,7 +2611,7 @@ msgstr "Részletek:"
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:98
 msgid "Total Number of people in your group"
-msgstr ""
+msgstr "A csoport összlétszáma"
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:111
 msgid ""
@@ -2620,10 +2619,12 @@ msgid ""
 "available. If you can answer the following questions, we will do our best to "
 "find you the perfect property:"
 msgstr ""
+"Az alábbiakban néhány példát talál szabad szállásainkra.  Amennyiben "
+"válaszolni tudna a kérdésekre, megkeressük Önnek a tökéletes ingatlant:"
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:115
 msgid "Are you happy with the types of rooms suggested below?"
-msgstr ""
+msgstr "A lent ajánlott szobák megfelelőek az Ön számára?"
 
 #: /home/yanna/git-test/code/application/views/restricted/user_group_quote.php:122
 msgid "What is your budget?"
